--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -1500,6 +1500,9 @@
                                                             <placeholder/>
                                                             </child>
                                                             <child>
+                                                            <placeholder/>
+                                                            </child>
+                                                            <child>
                                                             <widget class="GtkLabel" id="label_start_selector_jumps">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
@@ -3725,7 +3728,6 @@ EncoderInertialCapture</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="show_tabs">False</property>
-                                            <property name="show_border">False</property>
                                             <property name="tab_hborder">10</property>
                                             <property name="tab_vborder">4</property>
                                             <child>
@@ -21356,6 +21358,9 @@ then click this button.</property>
                                                             <property name="x_options"/>
                                                             <property name="y_options"/>
                                                             </packing>
+                                                            </child>
+                                                            <child>
+                                                            <placeholder/>
                                                             </child>
                                                             <child>
                                                             <placeholder/>
