--- a/glade/app1.glade
+++ b/glade/app1.glade
@@ -8341,6 +8341,7 @@ EncoderInertialCapture</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
                                                             <property name="tab_pos">bottom</property>
+                                                            <property name="show_border">False</property>
                                                             <child>
                                                             <widget class="GtkVBox" id="vbox_execute_and_results">
                                                             <property name="visible">True</property>
@@ -10040,15 +10041,10 @@ EncoderInertialCapture</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <child>
-                                                            <widget class="GtkFrame" id="frame36">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="label_xalign">0</property>
-                                                            <property name="shadow_type">none</property>
-                                                            <child>
                                                             <widget class="GtkAlignment" id="alignment120">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
+                                                            <property name="top_padding">4</property>
                                                             <child>
                                                             <widget class="GtkVBox" id="vbox126">
                                                             <property name="visible">True</property>
@@ -10286,12 +10282,9 @@ EncoderInertialCapture</property>
                                                             </widget>
                                                             </child>
                                                             </widget>
-                                                            </child>
-                                                            </widget>
                                                             <packing>
                                                             <property name="expand">False</property>
-                                                            <property name="fill">True</property>
-                                                            <property name="padding">4</property>
+                                                            <property name="fill">False</property>
                                                             <property name="position">0</property>
                                                             </packing>
                                                             </child>
@@ -10361,15 +10354,10 @@ EncoderInertialCapture</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="spacing">2</property>
                                                             <child>
-                                                            <widget class="GtkFrame" id="frame37">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="label_xalign">0</property>
-                                                            <property name="shadow_type">none</property>
-                                                            <child>
                                                             <widget class="GtkAlignment" id="alignment121">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
+                                                            <property name="top_padding">4</property>
                                                             <child>
                                                             <widget class="GtkVBox" id="vbox127">
                                                             <property name="visible">True</property>
@@ -10630,12 +10618,9 @@ EncoderInertialCapture</property>
                                                             </widget>
                                                             </child>
                                                             </widget>
-                                                            </child>
-                                                            </widget>
                                                             <packing>
                                                             <property name="expand">False</property>
-                                                            <property name="fill">True</property>
-                                                            <property name="padding">4</property>
+                                                            <property name="fill">False</property>
                                                             <property name="position">0</property>
                                                             </packing>
                                                             </child>
@@ -10720,15 +10705,10 @@ EncoderInertialCapture</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <child>
-                                                            <widget class="GtkFrame" id="frame38">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="label_xalign">0</property>
-                                                            <property name="shadow_type">none</property>
-                                                            <child>
                                                             <widget class="GtkAlignment" id="alignment122">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
+                                                            <property name="top_padding">4</property>
                                                             <child>
                                                             <widget class="GtkVBox" id="vbox128">
                                                             <property name="visible">True</property>
@@ -10903,12 +10883,9 @@ EncoderInertialCapture</property>
                                                             </widget>
                                                             </child>
                                                             </widget>
-                                                            </child>
-                                                            </widget>
                                                             <packing>
                                                             <property name="expand">True</property>
                                                             <property name="fill">True</property>
-                                                            <property name="padding">4</property>
                                                             <property name="position">0</property>
                                                             </packing>
                                                             </child>
@@ -10934,15 +10911,10 @@ EncoderInertialCapture</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <child>
-                                                            <widget class="GtkFrame" id="frame39">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="label_xalign">0</property>
-                                                            <property name="shadow_type">none</property>
-                                                            <child>
                                                             <widget class="GtkAlignment" id="alignment123">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
+                                                            <property name="top_padding">4</property>
                                                             <child>
                                                             <widget class="GtkVBox" id="vbox129">
                                                             <property name="visible">True</property>
@@ -11114,12 +11086,9 @@ EncoderInertialCapture</property>
                                                             </widget>
                                                             </child>
                                                             </widget>
-                                                            </child>
-                                                            </widget>
                                                             <packing>
                                                             <property name="expand">False</property>
-                                                            <property name="fill">True</property>
-                                                            <property name="padding">4</property>
+                                                            <property name="fill">False</property>
                                                             <property name="position">0</property>
                                                             </packing>
                                                             </child>
@@ -11463,15 +11432,10 @@ EncoderInertialCapture</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <child>
-                                                            <widget class="GtkFrame" id="frame22">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="label_xalign">0</property>
-                                                            <property name="shadow_type">none</property>
-                                                            <child>
                                                             <widget class="GtkAlignment" id="alignment66">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
+                                                            <property name="top_padding">4</property>
                                                             <child>
                                                             <widget class="GtkVBox" id="vbox94">
                                                             <property name="visible">True</property>
@@ -11582,11 +11546,9 @@ EncoderInertialCapture</property>
                                                             </widget>
                                                             </child>
                                                             </widget>
-                                                            </child>
-                                                            </widget>
                                                             <packing>
                                                             <property name="expand">False</property>
-                                                            <property name="fill">True</property>
+                                                            <property name="fill">False</property>
                                                             <property name="position">0</property>
                                                             </packing>
                                                             </child>
@@ -11647,15 +11609,10 @@ EncoderInertialCapture</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <child>
-                                                            <widget class="GtkFrame" id="frame40">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="label_xalign">0</property>
-                                                            <property name="shadow_type">none</property>
-                                                            <child>
                                                             <widget class="GtkAlignment" id="alignment124">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
+                                                            <property name="top_padding">4</property>
                                                             <child>
                                                             <widget class="GtkVBox" id="vbox130">
                                                             <property name="visible">True</property>
@@ -11818,12 +11775,9 @@ EncoderInertialCapture</property>
                                                             </widget>
                                                             </child>
                                                             </widget>
-                                                            </child>
-                                                            </widget>
                                                             <packing>
                                                             <property name="expand">False</property>
-                                                            <property name="fill">True</property>
-                                                            <property name="padding">4</property>
+                                                            <property name="fill">False</property>
                                                             <property name="position">0</property>
                                                             </packing>
                                                             </child>
@@ -11885,15 +11839,10 @@ EncoderInertialCapture</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="spacing">4</property>
                                                             <child>
-                                                            <widget class="GtkFrame" id="frame44">
-                                                            <property name="visible">True</property>
-                                                            <property name="can_focus">False</property>
-                                                            <property name="label_xalign">0</property>
-                                                            <property name="shadow_type">none</property>
-                                                            <child>
                                                             <widget class="GtkAlignment" id="alignment129">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
+                                                            <property name="top_padding">4</property>
                                                             <child>
                                                             <widget class="GtkVBox" id="vbox170">
                                                             <property name="visible">True</property>
@@ -12063,11 +12012,9 @@ EncoderInertialCapture</property>
                                                             </widget>
                                                             </child>
                                                             </widget>
-                                                            </child>
-                                                            </widget>
                                                             <packing>
                                                             <property name="expand">False</property>
-                                                            <property name="fill">True</property>
+                                                            <property name="fill">False</property>
                                                             <property name="position">0</property>
                                                             </packing>
                                                             </child>
