--- a/glade/dialog_image_test.glade
+++ b/glade/dialog_image_test.glade
@@ -10,7 +10,7 @@
     <property name="border_width">8</property>
     <property name="title" translatable="yes">Test image and description</property>
     <property name="modal">True</property>
-    <property name="type_hint">normal</property>
+    <property name="type_hint">dialog</property>
     <signal name="delete_event" handler="on_delete_event" swapped="no"/>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="vbox100">
